--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -69,7 +69,7 @@
         {% if app.user and app.user.isVerified == true %}
         <!--Add a Trick button-->
         <div class="text-center">
-            <a href="{{ path('trick_add') }}" class="btn btn-home-grid load mb-5" style="color: #fafafacc">
+            <a href="{{ path('trick_add') }}" class="btn btn-home-grid btn-lg load mb-5" style="color: #fafafacc">
                 <i class="fa fa-plus" style='color: #fafafacc'></i>
                 Add a Trick
             </a>
@@ -79,7 +79,6 @@
         <!-- Trick Grid Items-->
         <div class="container">
             <div class="row justify-content-center px-3">
-                {#{% for trick in tricks.data %}#}
                 {% for trick in tricks %}
                 <div class=" col-xxl-2_4 col-xl-3 col-lg-4 col-md-6 mb-5 element">
                     <div class="card d-flex flex-column h-100 portfolio-item mx-auto">
@@ -91,11 +90,11 @@
                                     See More...
                                 </a>
                             </div>
-                            {% for media in trick.media %}
-                            {% if media.isFeaturedImage == true %}
-                            <img src="{{ media.content }}" class="card-img-top" alt="...">
+                            {% if trick.images[0] is defined %}      
+                            <img src="{{ asset('assets/uploads/images/'~ trick.images[0].path) }}" class="card-img-top" alt="...">
+                            {% else %}
+                            <img src="{{ asset('assets/uploads/images/default/jump1.jpg') }}" class="card-img-top" alt="...">
                             {% endif %}
-                            {% endfor %}
                         </div>
                         <div class="card-body d-flex justify-content-between">
                             <div class="d-flex flex-column justify-content-center">
@@ -125,22 +124,11 @@
     </div>
     <!-- load more -->
     <div class="text-center">
-        <button type="button" class="btn btn-home-grid load mb-5" id="loadMore" data-type="+" style="color: #fafafacc">
+        <button type="button" class="btn btn-home-grid btn-lg load mb-5" id="loadMore" data-type="+" style="color: #fafafacc">
             <i class="fa fa-plus" style='color: #fafafacc'></i>
             Load More
         </button>
     </div>
-
-{#{% set path = "home.index" %}
-{% set pages = tricks.pages %}
-{% set currentPage = tricks.page %}
-{% include "common/pagination.html.twig" %}
-    <!--<div class="d-flex justify-content-center align-items-center">
-        <button href="#" class="btn btn-home-grid load mx-3 my-auto" style="color: #fafafacc">
-            <i class="fa fa-spinner" style='color: #fafafacc'></i>
-            Load More tricks...
-        </button>
-    </div>-->#}
 </section>
 
 {% include "modals/trick.modals.html.twig" %}
